--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home-banner">
+	<h1>Berggasthof Bayreuther Haus</h1>
+	<h2>Ihr familienfreundliches Ausflugslokal im Fichtelgebirge</h2>
+</div>
