--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,12 @@
 	<h1>Berggasthof Bayreuther Haus</h1>
 	<h2>Ihr familienfreundliches Ausflugslokal im Fichtelgebirge</h2>
 </div>
+<br>
+<div class="container">
+<p class="center">
+Egal ob nach einer langen Wanderung durchs wunderschöne Fichtelgebirge, nach dem Besuch des Wildparks mit ihrer Familie oder im Winter in der verdienten Pause zwischen den Abfahrten. 
+Wir versorgen Sie mit feinster bayerischer und österreichischer Küche.
+Genießen Sie einen deftigen Braten mit Kloß oder lassen Sie sich vom berühmt, riesigen Hüttenschnitzel in Staunen versetzen. 
+Anschließend schmeckt der Kaffee und der hausgebackene Kuchen der österreichischen Chefin beim Ausblick auf die Berge des Fichtelgebirges besonders lecker.
+</p>
+</div>
