--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,28 +1,38 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="navbar navbar-dark bg-dark navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+    <div class="navbar-brand">
+    <%= image_tag "bt.png" %>
+    </div>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to "Home", "#", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Messages", "#", class: "nav-link" %>
-      </li>
-      <li class="nav-item dropdown">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Action", "#", class: "dropdown-item" %>
-          <%= link_to "Another action", "#", class: "dropdown-item" %>
-        </div>
-      </li>
-    </ul>
-  </div>
+    <h3 class="nav-item active">
+      <%= link_to "Bayreuther Haus", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Wildpark", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Freizeitaktivitäten", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Öffnungszeiten", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Anfahrt", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Kontakt", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Galerie", "#", class: "nav-link" %>
+    </h3>
+
+    <h3 class="nav-item active">
+      <%= link_to "Impressum", "#", class: "nav-link" %>
+    </h3>
 </div>
