--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,16 @@
-<div class="navbar navbar-dark bg-dark navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="navbar navbar-dark bg-dark navbar-expand-sm navbar-light navbar-lewagon fixed-top shadow-lg">
     <div class="navbar-brand">
     <%= image_tag "bt.png" %>
     </div>
 
-
-    <h3 class="nav-item active">
-      <%= link_to "Bayreuther Haus", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Wildpark", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Freizeitaktivitäten", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Öffnungszeiten", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Anfahrt", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Kontakt", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Galerie", "#", class: "nav-link" %>
-    </h3>
-
-    <h3 class="nav-item active">
-      <%= link_to "Impressum", "#", class: "nav-link" %>
-    </h3>
+    <div class="items">
+      <a class="view overlay">Bayreuther Haus</a>
+      <a class="">Wildpark</a>
+      <a class="">Freizeitaktivitäten</a>
+      <a class="">Öffnungszeiten</a>
+      <a class="">Anfahrt</a>
+      <a class="">Kontakt</a>
+      <a class="">Galerie</a>
+      <a class="">Impressum</a>
+    </div>
 </div>
