--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,15 @@
 </div>
 <br>
 <div class="container">
-<p class="center">
+<p class="text-block">
 Egal ob nach einer langen Wanderung durchs wunderschöne Fichtelgebirge, nach dem Besuch des Wildparks mit ihrer Familie oder im Winter in der verdienten Pause zwischen den Abfahrten. 
 Wir versorgen Sie mit feinster bayerischer und österreichischer Küche.
 Genießen Sie einen deftigen Braten mit Kloß oder lassen Sie sich vom berühmt, riesigen Hüttenschnitzel in Staunen versetzen. 
 Anschließend schmeckt der Kaffee und der hausgebackene Kuchen der österreichischen Chefin beim Ausblick auf die Berge des Fichtelgebirges besonders lecker.
 </p>
 </div>
+<br>
+<div class="neuerfindung">
+<%= image_tag "neuerfindung.png" %>
+</div>
+<br>
