add wildpark page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@ Anschließend schmeckt der Kaffee und der hausgebackene Kuchen der österreichis
 </p>
 </div>
 <br>
-<div class="neuerfindung">
+<div class="center-images">
 <%= image_tag "neuerfindung.png" %>
 </div>
 <br>
