add freizeitaktivitäten und öffnungszeiten pages

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,9 +12,11 @@
 
 a {
 	font-size: 20px;
-	padding: 8px;
+	padding: 2px;
+	color: white;
 }
 
 .items {
 	color: white;
+	justify-content: center;
 }
