--- a/app/views/pages/wildpark.html.erb
+++ b/app/views/pages/wildpark.html.erb
@@ -12,3 +12,14 @@
 <div class="center-images">
 	<%= image_tag "wildpark.png" %>
 </div>
+
+<br>
+<div class="container">
+	<p class="text-block">
+	Entdecken und erleben Sie unsere heimische Tierwelt auf dem Rundweg durch das Tierfreigelände am Waldhaus Mehlmeisel. Das Highlight: Der Hochweg direkt über Luchs- und Wildschwein.  Der Hochsteg führt in drei Metern Höhe über die Gehege und eröffnet neue und interessante Perspektiven. An mehreren Aussichtsplattformen können Sie den Wildschweinen beim Schwimmen und dem Luchs beim Klettern zuschauen – manche Aktionen finden fast in Reichweite des Hochstegs und lassen Sie so hautnah dabei sein.
+
+	 Weitere Informationen unter: http://www.waldhaus-mehlmeisel.de/wildpark.html
+	</p>
+</div>
+
+<br>
