--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,10 +4,10 @@
     </div>
 
     <div class="items">
-      <a class="view overlay">Bayreuther Haus</a>
-      <a class="">Wildpark</a>
-      <a class="">Freizeitaktivitäten</a>
-      <a class="">Öffnungszeiten</a>
+      <a><%= link_to "Bayreuther Haus", root_path %></a>
+      <a><%= link_to "Wildpark", pages_wildpark_path %></a>
+      <a><%= link_to "Freizeitaktivitäten", pages_freizeitaktivitaeten_path %></a>
+      <a><%= link_to "Öffnungszeiten", pages_oeffnungszeiten_path %></a>
       <a class="">Anfahrt</a>
       <a class="">Kontakt</a>
       <a class="">Galerie</a>
