add remaining pages

--- a/app/views/pages/oeffnungszeiten.html.erb
+++ b/app/views/pages/oeffnungszeiten.html.erb
@@ -10,11 +10,13 @@
 <br>
 
 <div class="container">
-	<p class="text-block">
-	<strong>Montag</strong> Ruhetag <br>
-	<strong>Dienstag</strong> bis <strong>Sonntag</strong> geöffnet <br>
-	durchgehend warme Küche von 10:30 Uhr bis 18:00 Uhr <br><br>
-	Bei Skibetrieb durchgehend geöffnet! <br>
-	10:00 Uhr bis 22:00 Uhr <br>
-	</p>
+	<div class="center">
+		<p class="oeffnungszeiten">
+		<strong>Montag</strong> Ruhetag <br>
+		<strong>Dienstag</strong> bis <strong>Sonntag</strong> geöffnet <br>
+		durchgehend warme Küche von 10:30 Uhr bis 18:00 Uhr <br><br>
+		Bei Skibetrieb durchgehend geöffnet! <br>
+		10:00 Uhr bis 22:00 Uhr <br>
+		</p>
+	</div>
 </div>
