--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,9 @@
       <a><%= link_to "Wildpark", pages_wildpark_path %></a>
       <a><%= link_to "Freizeitaktivitäten", pages_freizeitaktivitaeten_path %></a>
       <a><%= link_to "Öffnungszeiten", pages_oeffnungszeiten_path %></a>
-      <a class="">Anfahrt</a>
-      <a class="">Kontakt</a>
-      <a class="">Galerie</a>
-      <a class="">Impressum</a>
+      <a><%= link_to "Anfahrt", pages_anfahrt_path %></a>
+      <a><%= link_to "Kontakt", pages_kontakt_path %></a>
+      <a><%= link_to "Galerie", pages_galerie_path %></a>
+      <a><%= link_to "Impressum", pages_impressum_path %></a>
     </div>
 </div>
