trying to add marker but does not yet work

--- a/app/views/pages/anfahrt.html.erb
+++ b/app/views/pages/anfahrt.html.erb
@@ -15,5 +15,6 @@
 </div>
 
 <div id="map"
-     style="width: 100%; height: 600px;"
+	 class ="center"
+     style="width: 50%; height: 600px;"
      data-mapbox-api-key="pk.eyJ1Ijoicm9iaW4tdGVjaC13ZWIiLCJhIjoiY2s5OXJnZHR2MDZ1ajNucndkdDg4MWdhYyJ9.y710hpeYXWRsh9u58drpOg"></div>
